# libmatepanelmm

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.in  libmatepanelappletmm.spec.in
build_shared/: Makefile_build_gensrc.am_fragment  Makefile_gensrc.am_fragment
debian/: changelog  control.in  copyright  libmatepanelappletmm-2.6-dev.doc-base.libpanelappletmm2.6-reference  libmatepanelappletmm-2.6-dev.docs  libmatepanelappletmm-2.6-dev.install  rules  watch
docs/: Makefile.am  Makefile.in
docs/reference/: Doxyfile.in  Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.am_fragment  Makefile.in
examples/mateconf/: Makefile.am  Makefile.in  Simple_PanelAppMateConf.server  main.cc
examples/simple/: Makefile.am  Makefile.in  README  Simple_PanelApp.server  main.cc
libmatepanelapplet/: Makefile.am  Makefile.in  libmatepanelappletmm-2.6-uninstalled.pc.in  libmatepanelappletmm-2.6.pc.in  libmatepanelappletmm.h  libmatepanelappletmmconfig.h.in
libmatepanelapplet/libmatepanelappletmm/: Makefile.am  Makefile.in  applet.cc  applet.h  enums.cc  enums.h  factory.cc  factory.h  init.cc  init.h  private.cc  private.h  wrap_init.cc  wrap_init.h
libmatepanelapplet/libmatepanelappletmm/private/: Makefile.am  Makefile.in  applet_p.h  enums_p.h
libmatepanelapplet/src/: Makefile.am  Makefile.in  Makefile_list_of_hg.am_fragment  applet.ccg  applet.hg  enums.ccg  enums.hg  libmatepanelapplet.defs  libmatepanelapplet_enums.defs  libmatepanelapplet_methods.defs  libmatepanelapplet_signals.defs
scripts/: Makefile.in  macros.m4
tools/: Makefile.in
tools/extra_defs_gen/: Makefile.am  Makefile.in  generate_defs_libmatepanelapplet.cc
tools/m4/: Makefile.am  Makefile.in  Makefile_list_of_sources.am_fragment  convert.m4  convert_libmatepanelappletmm.m4
