SUBDIRS		= src libmatepanelappletmm

EXTRA_DIST	= README					\
		  libmatepanelappletmmconfig.h.in libmatepanelappletmm.h	\
		  libmatepanelappletmm-2.6.pc.in libmatepanelappletmm-2.6-uninstalled.pc.in

libmatepanelappletmm_includedir = $(includedir)/libmatepanelappletmm-2.6
libmatepanelappletmm_include_HEADERS = libmatepanelappletmm.h

libmatepanelappletmm_configdir		= $(libdir)/libmatepanelappletmm-2.6/include
libmatepanelappletmm_config_DATA	= libmatepanelappletmmconfig.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libmatepanelappletmm-2.6.pc

                           
