## Copyright (c) 2003
## The libmatepanelappletmm development team.

sublib_name	= libmatepanelappletmm
sublib_namespace = Panel
sublib_parentdir = libmatepanelappletmm
files_defs	= libmatepanelapplet.defs \
							libmatepanelapplet_enums.defs \
							libmatepanelapplet_methods.defs \
							libmatepanelapplet_signals.defs \
							libmatepanelapplet_vfuncs.defs \
							libmatepanelapplet_docs.xml \
							libmatepanelapplet_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment
